@@ -2,6 +2,7 @@
 -----
 1. Display 'Calculating...', and 'Deleting...' in cache settings page if
    relevant.
+2. Add "(Muted)" to volume button tooltip if volume is currently muted.
 
 1.0.2
 -----
